parser/myCParser.py
# Generated from myC.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class myCParser ( Parser ):

    grammarFileName = "myC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<'", "'>'", "'{'", "'}'", 
                     "';'", "','", "'('", "')'", "'='", "'['", "']'", "'if'", 
                     "'else'", "'while'", "'for'", "'return'", "'!'", "'*'", 
                     "'/'", "'%'", "'+'", "'-'", "'=='", "'!='", "'<='", 
                     "'>='", "'&&'", "'||'", "'int'", "'double'", "'char'", 
                     "'string'", "'void'", "'struct'", "'.'", "'strlen'", 
                     "'atoi'", "'printf'", "'scanf'", "'&'", "'gets'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "INT", 
                      "DOUBLE", "CHAR", "STRING", "LIB", "Conjunction", 
                      "Operator", "LineComment", "BlockComment", "WS" ]

    RULE_prog = 0
    RULE_include = 1
    RULE_mStructDef = 2
    RULE_structParam = 3
    RULE_mFunction = 4
    RULE_params = 5
    RULE_param = 6
    RULE_funcBody = 7
    RULE_body = 8
    RULE_block = 9
    RULE_initialBlock = 10
    RULE_arrayInitBlock = 11
    RULE_structInitBlock = 12
    RULE_assignBlock = 13
    RULE_ifBlocks = 14
    RULE_ifBlock = 15
    RULE_elifBlock = 16
    RULE_elseBlock = 17
    RULE_condition = 18
    RULE_whileBlock = 19
    RULE_forBlock = 20
    RULE_for1Block = 21
    RULE_for3Block = 22
    RULE_returnBlock = 23
    RULE_expr = 24
    RULE_mType = 25
    RULE_mArray = 26
    RULE_mVoid = 27
    RULE_mStruct = 28
    RULE_structMember = 29
    RULE_arrayItem = 30
    RULE_func = 31
    RULE_strlenFunc = 32
    RULE_atoiFunc = 33
    RULE_printfFunc = 34
    RULE_scanfFunc = 35
    RULE_getsFunc = 36
    RULE_selfDefinedFunc = 37
    RULE_argument = 38
    RULE_mID = 39
    RULE_mINT = 40
    RULE_mDOUBLE = 41
    RULE_mCHAR = 42
    RULE_mSTRING = 43
    RULE_mLIB = 44

    ruleNames =  [ "prog", "include", "mStructDef", "structParam", "mFunction", 
                   "params", "param", "funcBody", "body", "block", "initialBlock", 
                   "arrayInitBlock", "structInitBlock", "assignBlock", "ifBlocks", 
                   "ifBlock", "elifBlock", "elseBlock", "condition", "whileBlock", 
                   "forBlock", "for1Block", "for3Block", "returnBlock", 
                   "expr", "mType", "mArray", "mVoid", "mStruct", "structMember", 
                   "arrayItem", "func", "strlenFunc", "atoiFunc", "printfFunc", 
                   "scanfFunc", "getsFunc", "selfDefinedFunc", "argument", 
                   "mID", "mINT", "mDOUBLE", "mCHAR", "mSTRING", "mLIB" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    ID=43
    INT=44
    DOUBLE=45
    CHAR=46
    STRING=47
    LIB=48
    Conjunction=49
    Operator=50
    LineComment=51
    BlockComment=52
    WS=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.IncludeContext)
            else:
                return self.getTypedRuleContext(myCParser.IncludeContext,i)


        def initialBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.InitialBlockContext)
            else:
                return self.getTypedRuleContext(myCParser.InitialBlockContext,i)


        def arrayInitBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.ArrayInitBlockContext)
            else:
                return self.getTypedRuleContext(myCParser.ArrayInitBlockContext,i)


        def structInitBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.StructInitBlockContext)
            else:
                return self.getTypedRuleContext(myCParser.StructInitBlockContext,i)


        def mStructDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.MStructDefContext)
            else:
                return self.getTypedRuleContext(myCParser.MStructDefContext,i)


        def mFunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.MFunctionContext)
            else:
                return self.getTypedRuleContext(myCParser.MFunctionContext,i)


        def getRuleIndex(self):
            return myCParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = myCParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 90
                self.include()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 67645734912) != 0:
                self.state = 101
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 96
                    self.initialBlock()
                    pass

                elif la_ == 2:
                    self.state = 97
                    self.arrayInitBlock()
                    pass

                elif la_ == 3:
                    self.state = 98
                    self.structInitBlock()
                    pass

                elif la_ == 4:
                    self.state = 99
                    self.mStructDef()
                    pass

                elif la_ == 5:
                    self.state = 100
                    self.mFunction()
                    pass


                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mLIB(self):
            return self.getTypedRuleContext(myCParser.MLIBContext,0)


        def getRuleIndex(self):
            return myCParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = myCParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(myCParser.T__0)
            self.state = 107
            self.match(myCParser.T__1)
            self.state = 108
            self.mLIB()
            self.state = 109
            self.match(myCParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MStructDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mStruct(self):
            return self.getTypedRuleContext(myCParser.MStructContext,0)


        def structParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.StructParamContext)
            else:
                return self.getTypedRuleContext(myCParser.StructParamContext,i)


        def getRuleIndex(self):
            return myCParser.RULE_mStructDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMStructDef" ):
                listener.enterMStructDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMStructDef" ):
                listener.exitMStructDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMStructDef" ):
                return visitor.visitMStructDef(self)
            else:
                return visitor.visitChildren(self)




    def mStructDef(self):

        localctx = myCParser.MStructDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mStructDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.mStruct()
            self.state = 112
            self.match(myCParser.T__3)
            self.state = 114 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 113
                self.structParam()
                self.state = 116 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 50465865728) != 0):
                    break

            self.state = 118
            self.match(myCParser.T__4)
            self.state = 119
            self.match(myCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(myCParser.MTypeContext,0)


        def mStruct(self):
            return self.getTypedRuleContext(myCParser.MStructContext,0)


        def mID(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.MIDContext)
            else:
                return self.getTypedRuleContext(myCParser.MIDContext,i)


        def mArray(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.MArrayContext)
            else:
                return self.getTypedRuleContext(myCParser.MArrayContext,i)


        def getRuleIndex(self):
            return myCParser.RULE_structParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructParam" ):
                listener.enterStructParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructParam" ):
                listener.exitStructParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructParam" ):
                return visitor.visitStructParam(self)
            else:
                return visitor.visitChildren(self)




    def structParam(self):

        localctx = myCParser.StructParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structParam)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30, 31, 32, 33]:
                self.state = 121
                self.mType()
                pass
            elif token in [35]:
                self.state = 122
                self.mStruct()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 125
                self.mID()
                pass

            elif la_ == 2:
                self.state = 126
                self.mArray()
                pass


            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 129
                self.match(myCParser.T__6)
                self.state = 132
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 130
                    self.mID()
                    pass

                elif la_ == 2:
                    self.state = 131
                    self.mArray()
                    pass


                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.match(myCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mID(self):
            return self.getTypedRuleContext(myCParser.MIDContext,0)


        def params(self):
            return self.getTypedRuleContext(myCParser.ParamsContext,0)


        def funcBody(self):
            return self.getTypedRuleContext(myCParser.FuncBodyContext,0)


        def mType(self):
            return self.getTypedRuleContext(myCParser.MTypeContext,0)


        def mVoid(self):
            return self.getTypedRuleContext(myCParser.MVoidContext,0)


        def mStruct(self):
            return self.getTypedRuleContext(myCParser.MStructContext,0)


        def getRuleIndex(self):
            return myCParser.RULE_mFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMFunction" ):
                listener.enterMFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMFunction" ):
                listener.exitMFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMFunction" ):
                return visitor.visitMFunction(self)
            else:
                return visitor.visitChildren(self)




    def mFunction(self):

        localctx = myCParser.MFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30, 31, 32, 33]:
                self.state = 141
                self.mType()
                pass
            elif token in [34]:
                self.state = 142
                self.mVoid()
                pass
            elif token in [35]:
                self.state = 143
                self.mStruct()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 146
            self.mID()
            self.state = 147
            self.match(myCParser.T__7)
            self.state = 148
            self.params()
            self.state = 149
            self.match(myCParser.T__8)
            self.state = 150
            self.match(myCParser.T__3)
            self.state = 151
            self.funcBody()
            self.state = 152
            self.match(myCParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.ParamContext)
            else:
                return self.getTypedRuleContext(myCParser.ParamContext,i)


        def getRuleIndex(self):
            return myCParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = myCParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30, 31, 32, 33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.param()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 155
                    self.match(myCParser.T__6)
                    self.state = 156
                    self.param()
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(myCParser.MTypeContext,0)


        def mID(self):
            return self.getTypedRuleContext(myCParser.MIDContext,0)


        def getRuleIndex(self):
            return myCParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = myCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.mType()
            self.state = 166
            self.mID()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(myCParser.BodyContext,0)


        def returnBlock(self):
            return self.getTypedRuleContext(myCParser.ReturnBlockContext,0)


        def getRuleIndex(self):
            return myCParser.RULE_funcBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBody" ):
                listener.enterFuncBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBody" ):
                listener.exitFuncBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncBody" ):
                return visitor.visitFuncBody(self)
            else:
                return visitor.visitChildren(self)




    def funcBody(self):

        localctx = myCParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.body()
            self.state = 169
            self.returnBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.BlockContext)
            else:
                return self.getTypedRuleContext(myCParser.BlockContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.FuncContext)
            else:
                return self.getTypedRuleContext(myCParser.FuncContext,i)


        def getRuleIndex(self):
            return myCParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = myCParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 175
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        self.state = 171
                        self.block()
                        pass

                    elif la_ == 2:
                        self.state = 172
                        self.func()
                        self.state = 173
                        self.match(myCParser.T__5)
                        pass

             
                self.state = 179
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initialBlock(self):
            return self.getTypedRuleContext(myCParser.InitialBlockContext,0)


        def arrayInitBlock(self):
            return self.getTypedRuleContext(myCParser.ArrayInitBlockContext,0)


        def structInitBlock(self):
            return self.getTypedRuleContext(myCParser.StructInitBlockContext,0)


        def assignBlock(self):
            return self.getTypedRuleContext(myCParser.AssignBlockContext,0)


        def ifBlocks(self):
            return self.getTypedRuleContext(myCParser.IfBlocksContext,0)


        def whileBlock(self):
            return self.getTypedRuleContext(myCParser.WhileBlockContext,0)


        def forBlock(self):
            return self.getTypedRuleContext(myCParser.ForBlockContext,0)


        def returnBlock(self):
            return self.getTypedRuleContext(myCParser.ReturnBlockContext,0)


        def getRuleIndex(self):
            return myCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = myCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        try:
            self.state = 188
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.initialBlock()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.arrayInitBlock()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                self.structInitBlock()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 183
                self.assignBlock()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 184
                self.ifBlocks()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 185
                self.whileBlock()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 186
                self.forBlock()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 187
                self.returnBlock()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mID(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.MIDContext)
            else:
                return self.getTypedRuleContext(myCParser.MIDContext,i)


        def mType(self):
            return self.getTypedRuleContext(myCParser.MTypeContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myCParser.ExprContext)
            else:
                return self.getTypedRuleContext(myCParser.ExprContext,i)


        def getRuleIndex(self):
            return myCParser.RULE_initialBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitialBlock" ):
                listener.enterInitialBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitialBlock" ):
                listener.exitInitialBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitialBlock" ):
                return visitor.visitInitialBlock(self)
            else:
                return visitor.visitChildren(self)




    def initialBlock(self):

        localctx = myCParser.InitialBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_initialBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.mType()
            self.state = 191
            self.mID()
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 192
                self.match(myCParser.T__9)
                self.state = 193
                self.expr(0)


            self.state = 204
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 196
                self.match(myCParser.T__6)
                self.state = 197
                self.mID()
                self.state = 200
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 198
                    self.match(myCParser.T__9)
                    self.state = 199
                    self.expr(0)


                self.state = 206
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 207
            self.match(myCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayInitBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mType(self):
            return self.getTypedRuleContext(myCParser.MTypeContext,0)


        def mID(self):
            return self.getTypedRuleContext(myCParser.MIDContext,0)


        def mINT(self):
            return self.getTypedRuleContext(myCParser.MINTContext,0)


        def getRuleIndex(self):
            return myCParser.RULE_arrayInitBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayInitBlock" ):
                listener.enterArrayInitBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayInitBlock" ):
                listener.exitArrayInitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayInitBlock" ):
                return visitor.visitArrayInitBlock(self)
            else:
                return visitor.visitChildren(self)




    def arrayInitBlock(self):
